# AirwaveEngine

./: .clang-format  CMakeLists.txt  README.md  readme.txt
.cache/clangd/index/: Application.cpp.F3E42C76ABE37A30.idx  Application.h.D2125260D3508E0B.idx  ApplicationContext.h.F6CC0B773953A123.idx  Camera.cpp.C49F36402E3F4278.idx  Camera.h.5E0306F2122C500B.idx  CameraController.cpp.B2BF16DA0B7CB328.idx  CameraController.h.19BE637DCC78B229.idx  Common.h.00A4343D84FBB24E.idx  Data.h.75483086E5BB507B.idx  EntryPoint.h.6B1E4BFE2317A0E1.idx  EventManager.cpp.1240D619BBAA4700.idx  EventManager.h.8559B227693C6269.idx  FileUtils.h.268F2C0A6317DDCE.idx  GLFWWindow.cpp.A5C5AFED848FCCAE.idx  GLFWWindow.h.1B8EA5EBC67DCC8E.idx  GameCameraController.cpp.6DA05DDAB895C66A.idx  GameCameraController.h.DD8544997B46CC9D.idx  Geometry.h.6F0F8B4D5B2C8BA2.idx  GeometryUtils.h.8E6F8616EFE8DD66.idx  GraphicContext.cpp.D37A112CD6A41E15.idx  GraphicContext.h.15BAAAB8E43E0B29.idx  Log.cpp.3A741358C96FC935.idx  Log.h.41998E10237F1290.idx  Main.cpp.DD8C37FDD487C2EE.idx  OpenGLCommon.cpp.90E259BE537000D1.idx  OpenGLCommon.h.0AE1F0964DEC2154.idx  OpenGLContext.cpp.87587CA670DCF047.idx  OpenGLContext.h.F6FDA7A94231E2C4.idx  OpenGLShader.cpp.8267FD5925AA3BDC.idx  OpenGLShader.h.BFAA562C7E19D153.idx  OpenGLTexture.cpp.2B3A60691543809E.idx  OpenGLTexture.h.DD2BF2D819313C61.idx  OrthographicCamera.cpp.16BB3F65693486A7.idx  PerspectiveCamera.cpp.34C58509B259745B.idx  PerspectiveCamera.h.BA2CC34132C53482.idx  RenderContext.cpp.07D985428E0824FD.idx  RenderContext.h.293682667384B353.idx  TrackBallCameraController.cpp.B8D1FB8DFE6ADC06.idx  TrackBallCameraController.h.69B55F5E81F3CC3F.idx  Window.cpp.0BBD98A13173A596.idx  (+276 more)
assets/Shader/00/: 001_hello_triangle.frag  001_hello_triangle.vert  002_first_cube.frag  002_first_cube.vert  003_multitexture_cube.frag  003_multitexture_cube.vert
assets/qss/: dark.qss  editwidget.qss
assets/shader/: cube.frag  cube.vert  light.frag  light.vert  model.vert
assets/shaders/shader_chunk/: brdf.glsl  common.glsl  (+4 more)
engine/: CMakeLists.txt
engine/include/: airwave_engine.hpp
engine/include/core/: application.hpp  common.hpp  entry_point.hpp  window.hpp
engine/include/core/event/: event.hpp  event_dispatcher.hpp  event_observer.hpp
engine/include/core/math/: aabb.hpp  plane.hpp
engine/include/ecs/: aw_component.hpp  aw_entity.hpp  aw_scene.hpp  aw_system.hpp
engine/include/ecs/components/: camera_component.hpp  hierarchy_component.hpp  light_component.hpp  material_component.hpp  mesh_component.hpp  rigid_body_component.hpp  tag_component.hpp  transform_component.hpp
engine/include/ecs/components/singleton_components/: input_component.hpp  lights_manager_component.hpp  physics_world_component.hpp  renderer_component.hpp
engine/include/ecs/events/: collosion_event.hpp  trigger_event.hpp
engine/include/ecs/systems/: camera_system.hpp  input_system.hpp  light_system.hpp  physics_system.hpp  render_system.hpp  shadow_system.hpp  transform_system.hpp
engine/include/rendering/: framebuffer.hpp  material.hpp  mesh.hpp  postprocess_effect.hpp  primitive.hpp  renderer.hpp  shader.hpp  texture.hpp  uniforms.hpp
engine/include/rendering/opengl/: gl_framebuffer.hpp  gl_shader.hpp  gl_texture.hpp  gl_uniforms.hpp  gl_vertex_array.hpp
engine/include/rendering/passes/: pass.hpp
engine/include/resource/: model_resource.hpp  resource.hpp  resource_manager.hpp  shader_lib.hpp  shader_resource.hpp  texture_lib.hpp  texture_resource.hpp
engine/include/utils/: file_utils.hpp  geometry_utils.hpp  shader_utils.hpp  shapes_vao.hpp  texture_utils.hpp  utils.hpp  uuid.hpp
engine/include/utils/loaders/: gltf_loader.hpp
engine/src/core/: application.cpp  log.cpp  window.cpp
engine/src/ecs/: aw_scene.cpp
engine/src/ecs/systems/: physics_system.cpp  render_system.cpp
engine/src/rendering/: framebuffer.cpp  mesh.cpp  primitive.cpp  renderer.cpp  shader.cpp  texture.cpp  uniforms.cpp
engine/src/rendering/opengl/: gl_framebuffer.cpp  gl_shader.cpp  gl_texture.cpp  gl_vertex_array.cpp  gl_vertex_buffer.cpp
engine/src/resource/: model_resource.cpp  resource_manager.cpp  shader_lib.cpp  shader_resource.cpp  texture_lib.cpp  texture_resource.cpp
engine/src/utils/: file_utils.cpp  geometry_utils.cpp  shader_utils.cpp  texture_utils.cpp
sandbox/: CMakeLists.txt  sandbox.cpp  sandbox.hpp  sandbox.scene.txt
sandbox/editor/: CMakeLists.txt
sandbox/game/: CMakeLists.txt
source/engine/: aw_engine.hpp
source/sandbox/: CMakeLists.txt
src/: main.cpp
src/Application/: editwidget.cpp  editwidget.h  mainwindow.cpp  mainwindow.h  openglworker.cpp  openglworker.h
src/Core/: CMakeLists.txt
src/Core/Application/: Application.cpp  Application.h  ApplicationContext.h  ControllerEvent.cpp  ControllerEvent.h  EntryPoint.h  EventManager.cpp  EventManager.h
src/Core/Camera/: Camera.h  OrthographicCamera.h  PerspectiveCamera.h
src/Core/Controller/: CameraController.cpp  CameraController.h  GameCameraController.cpp  GameCameraController.h  TrackBallCameraController.cpp  TrackBallCameraController.h
src/Core/ECS/: Component.h  Entity.h  Node.cpp  Node.h  Scene.h  UUID.cpp  UUID.h
src/Core/ECS/Component/: MeshComponent.h
src/Core/Geometry/: Geometry.cpp  Geometry.h  GeometryUtils.cpp  GeometryUtils.h
src/Core/Render/: RenderContext.cpp  RenderContext.h  RenderTarget.cpp  RenderTarget.h
src/Core/Utils/: Common.h  FileUtils.h  Log.h
src/OpenGL/: camera.cpp  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  mytexture.cpp  mytexture.h  openglwidget.cpp  openglwidget.h  shader.cpp  shader.h
src/Platform/: CMakeLists.txt  GraphicContext.cpp  GraphicContext.h
src/Platform/OpenGL/: OpenGLCommon.cpp  OpenGLCommon.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h
src/Platform/Utils/: FileUtils.h
src/Platform/Windows/: GLFWWindow.cpp  GLFWWindow.h  Window.cpp  Window.h
src/SandBox/: CMakeLists.txt  Data.h  Main.cpp
src/Utils/: logger.cpp  logger.h  logger.inl  utils.h
test/: CMakeLists.txt  test_0.cpp  test_1.cpp
(+97 files in other folders)
